# dr-plan-solver-mirror

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
DR-plan/: CMakeLists.txt  Factory.h  Node.cpp  Node.h  RootFinder.cpp  Tree.h  main.cpp  stdafx.h
Executables/: CMakeLists.txt  main.cpp  testCircles.cpp
Splinter/include/: definitions.h
Splinter/x86/: splinter-static-3-0.lib
Splinter/x86-64/Debug/: splinter-3-0.exp
Splinter/x86-64/Release/: splinter-3-0.exp  splinter-3-0.lib
TwoTree/: CMakeLists.txt  TwoTree.cpp  TwoTree.h  stdafx.h
Utils/: BlackBox.hpp  CMakeLists.txt  Enumeration.h
Wolfram/: DRPLAN.wl  GraphvizUtils.wl  README.md  init.wls
Wolfram/DRPLAN/: Core.wl  DFSSolver.wl  OffsetSolver.wl  Solver.wl  Thread.wl  Utility.wl  Visualizer.wl
examples/: diamond.dot  draw.bat  zig-zag-23.dot  zig-zag-3.dot  zig-zag-7.dot  zig-zag-7.sol-1.dot  zig-zag-l-3.dot  zig-zag.dot
examples/Hexagonal-Lattice/: hexlattice-21.dot  hexlattice-21.sol.dot  hexlattice.uniform-14.dot
examples/Others/: diamond.dot  hexTrig.dot  hexTrig.sol-1.dot  hexTrig.sol-2.dot
examples/Tri-Hex/: CaymosSolutionTable.md
examples/Tri-Hex/graph1/: graph_1_with_coordinates.dot
examples/Tri-Hex/graph2/: graph2.ccs  graph_2_with_coordinates.dot
examples/Tri-Hex/graph_1/: graph1.ccs
examples/Zig-Zag/: zig-zag-2.dot  zig-zag-4.dot  zig-zag-5.dot  zig-zag-6-black.dot  zig-zag-6.dot  zig-zag-L-8.dot
include/: BlackBox.hpp  Enumeration.hpp  RootFinder.h  Tree.h  TwoTree.h  TwoTreeUtils.h  stdafx.h
scripts/: draw-folder.ps1
src/: Enumeration.h  Enumeration.tpp  Enumerator.cpp  Factory.cpp  Factory.h  Node.cpp  Node.h  Polynomial.cpp  Polynomial.hpp  RootFinder.cpp  RootFinder.h  Tree.cpp  Tree.h  TwoTree.cpp  TwoTreeUtils.cpp  interpolation.cpp  interpolation.hpp  main.cpp  spline.cpp  spline.hpp  stdafx.cpp
